Change agent to support variables in backups
