# mysql-operator/agent/api/openapi.yaml
@@ -14,7 +14,7 @@ info:
   version: 0.0.1
 externalDocs:
   description: Find out more about blaqkube MySQL operator
-  url: https://blaqkube.io/docs
+  url: https://docs.blaqkube.io
 servers:
 - url: /
 tags:
@@ -65,8 +65,8 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Backup'
-        description: Create a manual backup
+              $ref: '#/components/schemas/BackupRequest'
+        description: Create a backup
         required: true
       responses:
         "201":
@@ -336,6 +336,40 @@ components:
       - value
       type: object
     Backup:
+      description: output for a backup request
+      example:
+        bucket: backup.blaqkube.io
+        location: /blue/mybackup.dmp
+        id: abc
+      properties:
+        identifier:
+          type: string
+        bucket:
+          type: string
+        location:
+          type: string
+        start_time:
+          format: date-time
+          type: string
+        end_time:
+          format: date-time
+          nullable: true
+          type: string
+        status:
+          description: backup status
+          enum:
+          - Succeeded
+          - Failed
+          - Running
+          - Waiting
+          type: string
+      required:
+      - bucket
+      - identifier
+      - location
+      - start_time
+      type: object
+    BackupRequest:
       example:
         bucket: backup.blaqkube.io
         location: /blue/mybackup.dmp
@@ -347,25 +381,10 @@ components:
           type: string
         location:
           type: string
-        env:
+        envs:
           items:
             $ref: '#/components/schemas/EnvVar'
           type: array
-        timestamp:
-          format: date-time
-          type: string
-        status:
-          description: backup status
-          enum:
-          - Available
-          - Failed
-          - Pending
-          - Running
-          type: string
-        message:
-          description: keep message in case of an error
-          nullable: true
-          type: string
       required:
       - bucket
       - path
@@ -376,6 +395,7 @@ components:
         items:
         - bucket: backup.blaqkube.io
           location: /blue/mybackup.dmp
+          id: abc
       properties:
         size:
           type: integer
